SUBDIRS = core

@IGEOM_CONFIG_OPTIONS@
@IMESH_CONFIG_OPTIONS@
@IREL_CONFIG_OPTIONS@

build-check:
	$(MAKE) 'TESTS_ENVIRONMENT=: ' check

if HAVE_IGEOM
AM_CPPFLAGS += $(IGEOM_INCLUDES) $(IGEOM_CPPFLAGS)
LIBS += $(IGEOM_LIBS)
endif

if HAVE_IMESH
AM_CPPFLAGS += $(IMESH_INCLUDES) $(IMESH_CPPFLAGS)
LIBS += $(IMESH_LIBS)
endif

if HAVE_IREL
AM_CPPFLAGS += $(IREL_INCLUDES) $(IREL_CPPFLAGS)
LIBS += $(IREL_LIBS)
endif

if HAVE_MOAB
AM_CPPFLAGS += -DMOAB
endif

